# platform.core.connectivity.bluetooth-frwk

./: .cproject  .project  AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  Makefile  README  TODO  bluetooth-frwk-core.manifest  bluetooth-frwk-test.manifest  bluetooth-frwk.manifest  bluetooth-service.service.in  bluetooth_log_dump.sh  bluez-lib.c  bluez.h  capi-network-bluetooth.pc.in  common.h  gbs.conf  gbs.conf~  main.c  org.tizen.comms.service.in  project.config
TC/: _export_env.sh  (+6 more)
bluetooth-frwk-agent/: CMakeLists.txt  bluetooth-agent-cb.c  bluetooth-agent.c  bluetooth-agent.edc  bluetooth-agent.h  bluetooth-agent.ini  bluetooth-frwk-agent  marshal.list  org.bluez.frwk_agent.service  sc_core_agent.c  sc_core_agent.h  sc_core_agent.xml  stacktrim.h
bluetooth-frwk-agent/po/: CMakeLists.txt  POTFILES.in  bt-agent.pot  en_GB.po  ko.po  update-po.sh
bluetooth-hfp-agent/: CMakeLists.txt  bluetooth-hfp-agent.c  bluetooth-hfp-agent.h  hfp_agent.xml  org.bluez.hfp_agent.service
bluetooth-media-control/: CMakeLists.txt  bluetooth-media-control-api.c  bluetooth-media-control-api.h  bluetooth-media-control-internal.h  bluetooth-media-control.c  bluetooth-media-control.h  bluetooth-media-control.pc.in
bluetooth-media-control/test/: CMakeLists.txt  bluetooth-media-control-test.c
bluetooth-pb-agent/: CMakeLists.txt  bluetooth_pb_agent.c  bluetooth_pb_agent.h  bluetooth_pb_agent.xml  bluetooth_pb_vcard.c  bluetooth_pb_vcard.h  org.bluez.pb_agent.service
bluetooth-telephony/: CMakeLists.txt  bluetooth-telephony-api.c  bluetooth-telephony-api.h  bluetooth-telephony-internal.h  bluetooth-telephony.pc.in
bt-api/: CMakeLists.txt  TFXF5A4.tmp  bluetooth-api.pc.in  bt-adapter-le.c  bt-adapter.c  bt-audio.c  bt-avrcp.c  bt-common.c  bt-device.c  bt-dpm.c  bt-event-handler.c  bt-gatt-client.c  bt-gatt-service.c  bt-gatt.c  bt-gatt.xml  bt-hdp.c  bt-hid-device.c  bt-hid.c  bt-ipsp.c  bt-mdm.c  bt-network.c  bt-obex-server.c  bt-oob.c  bt-opp-client.c  bt-pbap.c  bt-request-sender.c  bt-rfcomm-client.c  bt-rfcomm-server.c  bt-scmst.c  bt-service-api.pc.in  bt-telephony.c  bt-telephony.xml  marshal.list
bt-api/include/: bt-common.h  bt-dpm.h  bt-event-handler.h  bt-mdm.h  bt-request-sender.h
bt-core/: CMakeLists.txt  bluetooth-frwk-core  bluetooth-frwk-core.conf  bt-core-adapter.c  bt-core-adapter.xml  bt-core-dbus-handler.c  bt-core-main.c  bt-core-noti-handler.c  bt_core.c  bt_core.h  bt_core.xml  org.projectx.bt_core.service
bt-core/include/: bt-core-adapter.h  bt-core-common.h  bt-core-dbus-handler.h  bt-core-main.h  bt-core-noti-handler.h
bt-httpproxy/: CMakeLists.txt  bluetooth-frwk-httpproxy.conf  bt-httpproxy.c  bt-httpproxy.h  org.projectx.httpproxy.service
bt-oal/: CMakeLists.txt  oal-adapter-mgr.c  oal-device-mgr.c  oal-hardware.c  oal-hid-host.c  oal-internal.h  oal-manager.c  oal-socket.c
bt-oal/bluez_hal/: CMakeLists.txt  hal-api.txt
bt-oal/common/: oal-common.c  oal-common.h  oal-event-dispatcher.c  oal-utils.c  oal-utils.h
bt-oal/include/: oal-adapter-mgr.h  oal-device-mgr.h  oal-event.h  oal-hardware.h  oal-hid-host.h  oal-manager.h  oal-socket.h
bt-service/: CMakeLists.txt  auto-pair-blacklist  bluetooth-frwk-service  bluetooth-frwk-service.conf  bluetooth-frwk-service.conf.in  bluetooth-frwk-service.service  bluetooth-frwk-service_user.conf  bt-popup.c  bt-request-handler.c  bt-service-adapter-le.c  bt-service-adapter.c  bt-service-agent-notification.c  bt-service-agent.c  bt-service-audio.c  bt-service-avrcp-controller.c  bt-service-avrcp.c  bt-service-common.c  bt-service-device.c  bt-service-device.c.orig  bt-service-dpm.c  bt-service-event-receiver.c  bt-service-event-sender.c  bt-service-gap-agent.c  bt-service-gap-agent.xml  bt-service-gap-agent1.xml  bt-service-headset-connection.c  bt-service-hid.c  bt-service-main.c  bt-service-mdm.c  bt-service-media-agent.xml  bt-service-network.c  bt-service-obex-agent.c  bt-service-obex-agent.xml  bt-service-obex-server.c  bt-service-oob.c  bt-service-opp-client.c  bt-service-pbap.c  bt-service-rfcomm-client.c  bt-service-rfcomm-server.c  bt-service-util.c  (+3 more)
bt-service-adaptation/: CMakeLists.txt  auto-pair-blacklist  bt-request-service.xml
bt-service-adaptation/services/: bt-request-handler.c  bt-service-agent-util.c  bt-service-common.c  bt-service-dpm.c  bt-service-event-receiver.c  bt-service-main.c  bt-service-util.c
bt-service-emul/: CMakeLists.txt  bluetooth-frwk-service.conf.in  bt-request-handler.c  bt-service-adapter-le.c  bt-service-adapter.c  bt-service-audio.c  bt-service-avrcp-controller.c  bt-service-avrcp.c  bt-service-common.c  bt-service-device.c  bt-service-dpm.c  bt-service-event-generator.c  bt-service-event-manager.c  bt-service-event-sender.c  bt-service-hid.c  bt-service-main.c  bt-service-network.c  bt-service-obex-server.c  bt-service-oob.c  bt-service-opp-client.c  bt-service-pbap.c  bt-service-rfcomm-client.c  bt-service-rfcomm-server.c  bt-service-util.c
bt-service-emul/include/: bt-request-handler.h  bt-service-adapter-le.h  bt-service-adapter.h  bt-service-audio.h  bt-service-avrcp-controller.h  bt-service-avrcp.h  bt-service-common.h  bt-service-device.h  bt-service-dpm.h  bt-service-event-manager.h  bt-service-event.h  bt-service-hid.h  bt-service-main.h  bt-service-network.h  bt-service-obex-server.h  bt-service-oob.h  bt-service-opp-client.h  bt-service-pbap.h  bt-service-rfcomm-client.h  (+1 more)
lib/: BluetoothFW_PG.h  CMakeLists.txt  bluetooth-api-common.c  bluetooth-api-common.h  bluetooth-api.h  bluetooth-api.pc.in  bluetooth-audio-api.c  bluetooth-audio-api.h  bluetooth-control-api.c  bluetooth-control-api.h  bluetooth-gap-api.c  bluetooth-gap-api.h  bluetooth-hdp-api.c  bluetooth-hdp-api.h  bluetooth-hid-api.c  bluetooth-hid-api.h  bluetooth-network-api.c  bluetooth-network-api.h  bluetooth-obex-server-api.c  bluetooth-obex-server-api.h  bluetooth-opc-api.c  bluetooth-opc-api.h  bluetooth-rfcomm-api.c  bluetooth-rfcomm-api.h  bluetooth-sdp-api.c  bluetooth-sdp-api.h  bluetooth-service.c  bluez-hdp.c  bluez.c  common.c  marshal.list  obex-agent.c  obex-agent.h  obex.c
(+245 files in other folders)
