CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
OPTION(LIBNOTIFY_SUPPORT "Enable libnotify for popup" Off)
IF(LIBNOTIFY_SUPPORT)
    ADD_DEFINITIONS("-DLIBNOTIFY_SUPPORT")
ENDIF(LIBNOTIFY_SUPPORT)

OPTION(LIBNOTIFICATION_SUPPORT "Use Tizen notification system" Off)
IF(LIBNOTIFICATION_SUPPORT)
    ADD_DEFINITIONS("-DLIBNOTIFICATION_SUPPORT")
ENDIF(LIBNOTIFICATION_SUPPORT)

ADD_SUBDIRECTORY(bt-api)

ADD_SUBDIRECTORY(bt-service)

ADD_SUBDIRECTORY(bt-core)

#ADD_SUBDIRECTORY(test)
