CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ADD_SUBDIRECTORY(bt-api)

IF("$ENV{CFLAGS}" MATCHES "-DEMUL")
ADD_SUBDIRECTORY(bt-service-emul)
ELSE()
IF("$ENV{BT_INCLUDE_OAL}" STREQUAL "ENABLED")
ADD_SUBDIRECTORY(bt-service-adaptation)
ELSE("$ENV{BT_INCLUDE_OAL}" STREQUAL "ENABLED")
ADD_SUBDIRECTORY(bt-service)
ENDIF("$ENV{BT_INCLUDE_OAL}" STREQUAL "ENABLED")
ENDIF()

ADD_SUBDIRECTORY(bt-httpproxy)

ADD_SUBDIRECTORY(bt-core)

ADD_SUBDIRECTORY(test)
