CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(bluetooth-pb-agent C)

SET(SRCS bluetooth_pb_agent.c bluetooth_pb_vcard.c)
SET(APP_VENDOR tizen)
SET(APP_NAME bluetooth-pb-agent)
SET(APP_DIR /usr/bin)
SET(APP_LOCALEDIR /usr/share/locale)

IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
	SET(CMAKE_BUILD_TYPE "Release")
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "")
MESSAGE("Build type: ${CMAKE_BUILD_TYPE}")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED contacts-service vconf)

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_C_FLAGS_RELEASE "-O2")

FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET")
	MESSAGE("add -DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

#FIND_PROGRAM(MARSHALTOOL NAMES glib-genmarshal)
#EXEC_PROGRAM("${MARSHALTOOL}" ARGS "--prefix=marshal ${CMAKE_CURRENT_SOURCE_DIR}/marshal.list --header > ${CMAKE_CURRENT_SOURCE_DIR}/marshal.h")
#EXEC_PROGRAM("${MARSHALTOOL}" ARGS "--prefix=marshal ${CMAKE_CURRENT_SOURCE_DIR}/marshal.list --body > ${CMAKE_CURRENT_SOURCE_DIR}/marshal.c")

FIND_PROGRAM(DBUS_BINDING_TOOL NAMES dbus-binding-tool)
EXEC_PROGRAM("${DBUS_BINDING_TOOL}" ARGS "--prefix=bluetooth_pb ${CMAKE_CURRENT_SOURCE_DIR}/bluetooth_pb_agent.xml --mode=glib-server --output=${CMAKE_CURRENT_SOURCE_DIR}/bluetooth_pb_agent_glue.h")


ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DVENDOR=\"${APP_VENDOR}\"")
ADD_DEFINITIONS("-DAPPNAME=\"${APP_NAME}\"")
ADD_DEFINITIONS("-DAPP_DIR=\"${APP_DIR}\"")
ADD_DEFINITIONS("-DAPP_LOCALEDIR=\"${APP_LOCALEDIR}\"")

SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS})

#ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})
#SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION 0.1.0)

#ADD_CUSTOM_TARGET(bluetooth-agent.edj
#		COMMAND edje_cc -id ${CMAKE_CURRENT_SOURCE_DIR}
#		${CMAKE_CURRENT_SOURCE_DIR}/bluetooth-agent.edc ${CMAKE_CURRENT_BINARY_DIR}/bluetooth-agent.edj
#		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/bluetooth-agent.edc
#)
#ADD_DEPENDENCIES(${PROJECT_NAME} bluetooth-agent.edj)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
#INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/bluetooth-agent.edj DESTINATION share/edje)

# install desktop file & icon
SET(PREFIX ${CMAKE_INSTALL_PREFIX})
#CONFIGURE_FILE(${PROJECT_NAME}.desktop.in ${PROJECT_NAME}.desktop)
#INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.desktop DESTINATION share/install-info/application/)
#INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/icon_bluetooth-agent.png DESTINATION share/icon)

# install ini file
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/org.bluez.pb_agent.service DESTINATION share/dbus-1/services)

# install booting script
#INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/bluetooth-pb-agent DESTINATION /etc/rc.d/init.d)

# i18n
#ADD_SUBDIRECTORY(po)

